# AvidaMT

./: .gitignore  BUGS.md  BUILD_LOG.md  CMakeLists.txt  CONTRIBUTORS  CRASH_BUG_FIX_PLAN.md  INSTALL.md  README.md  magic100s.md
etc/: major_transitions.cfg  ts_mt.cfg
guides/: EXPERIMENT RUNS AND SETTINGS SUMMARY.txt  entrenchment_exp_guide.md  lod_fitness_combo_guide.md
hpcc_scripts/: 0_new_experiment_setup.sh  10_generate_linear_stability_sbatch.py  10_generate_linear_stability_sbatch_base_exp.py  11_generate_narrow_bracket_sbatch.py  11_generate_narrow_bracket_sbatch_base_exp.py  12_verify_linear_stability_assay.py  13_verify_narrow_stability_assay.py  14_merge_stability_data.py  15_reorganize_stability_assay.sh  16_tar_stability_assay.sbatch  1_summarize_run_data.py  2_data_verify_and_cleanup.sh  3_tar_uni_and_multi_folders.sbatch  4_verify_growth_assay.py  5_tar_growth_assay.sbatch  6_generate_stability_assay_sbatchs.sh  6_parse_stability_logs.py  7_verify_stability_assay.py  8_linear_stability_summary.py  8_tar_stability_assay.sbatch  merge_stability_data.py  narrow_bracket_summary.py
hpcc_scripts/hpcc_script_readmes/: 1_summarize_run_data_README.md  2_data_verify_and_cleanup_README.md  3_tar_uni_and_multi_folders_README.md
src/: gls.cpp  gls.h  lod_knockouts.h  lod_knockouts_fitness.h  mt_analysis.h  mt_lr_gls.cpp  mt_lr_gls_dol_control.cpp  mt_propagule_orig.h  multi_birth_selfrep_not_remote_ancestor.h  ts.cpp  ts.h  ts_mt.cpp  ts_replication_propagule.h
